# template-haskell-project

./: .gitignore  .travis.yml  README.md  run  stack.yaml  template-haskell-project.cabal
.github/: dependabot.yml
.github/workflows/: CI.yml  build.yml
src/: Lib.hs
test/: Spec.hs
