name:                template-haskell-project
version:             0.1.2.0
synopsis:            Initial version
description:         Please see README.md
homepage:            https://github.com/pascalpoizat/template-haskell-project#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Pascal Poizat
maintainer:          pascal.poizat@lip6.fr
copyright:           2017 Pascal Poizat
category:            Template
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
  default-language:    Haskell2010

executable template-haskell-project-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  build-depends:       base >= 4.7 && < 5
                     , template-haskell-project
                     , containers >= 0.5
  default-language:    Haskell2010

test-suite template-haskell-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , tasty >= 0.11.0.4
                     , tasty-hunit >= 0.9.2
                     , tasty-quickcheck >= 0.8.4
                     , tasty-smallcheck >= 0.8.1
                     , template-haskell-project
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pascalpoizat/template-haskell-project
